# st-record

./: Makefile  README.md  app.py  pyproject.toml
st_record/: __init__.py
st_record/frontend/: package-lock.json  package.json
st_record/frontend/src/: index.tsx
tests/: test_st_record.py
