[tool.poetry]
name = "st-record"
version = "0.1.0"
description = "Streamlit component for recording audio."
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.2"
streamlit = "^0.84.0"
importlib-resources = "^5.2.0"
pyarrow = "^4.0.1"

[tool.poetry.dev-dependencies]
librosa = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
